# pluma

./: .gitignore  CMakeLists.txt  build.gradle  build.sh  java.gradle  settings.gradle
src/main/jni/: Android.mk
